--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <div id="statusPanel"></div>
       <div id="map"></div>
+      <div id="inventory"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
